[package]
name = "ptd"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = []

[dependencies]
bevy = { version = "0.14", features = ["jpeg"] }
bevy_asset_loader = "0.21.0"
bevy_egui = "0.28.0"
bevy-inspector-egui = "0.25.2"
bevy_rapier3d = "0.27.0"
leafwing-input-manager = "0.15.0"
bevy_infinite_grid = "0.13.0"
