[package]
name = "ptd"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = []

[dependencies]
bevy = { version = "0.15", features = ["jpeg"] }
bevy_asset_loader = { version = "0.22.0", features = [
    "standard_dynamic_assets",
] }
bevy_egui = "0.31.1"
bevy-inspector-egui = "0.28.1"
leafwing-input-manager = "0.16.0"
bevy_infinite_grid = "0.14.0"
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
serde = "1.0.217"
anyhow = "1.0.95"
vleue_navigator = { version = "0.11.1", features = ["debug-with-gizmos"] }
